# espresso-bridge

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: lamarzocco-setup.md
scripts/: deploy.sh  espresso-bridge.service  kiosk.sh  rotate.sh  setup-pi.sh
src/espresso_bridge/: __init__.py  cli.py  main.py
src/espresso_bridge/api/: server.py
src/espresso_bridge/ble/: lamarzocco.py  manager.py  shotstopper.py
src/espresso_bridge/cloud/: lamarzocco.py
src/espresso_bridge/core/: config.py  models.py  state.py
src/espresso_bridge/static/: index.html
src/espresso_bridge/static/css/: app.css
src/espresso_bridge/static/js/: app.js
tests/: test_lamarzocco.py  test_schedule.py  test_service.py  test_shotstopper.py
