[project]
name = "espresso-bridge"
version = "0.1.0"
description = "Raspberry Pi controller bridge for espresso machine (ShotStopper + La Marzocco Linea Micra)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Glenn Contreras" },
]

dependencies = [
    "bleak>=0.21",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "typer>=0.9",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
lm = [
    "lmcloud",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
espresso-bridge = "espresso_bridge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/espresso_bridge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
